flapivor/tests/m3/hopix/typechecker/bad/64-for-02.hopix
val x : Ref<Int> = ref 0

val main : Unit =
    for i = 0 to 10 {
      "Do that!?"
    }
